# ostim-prism

./: .gitignore  .gitmodules  README.md  TT_OStimPrism.esp  tag-push.bat
.github/workflows/: main-release.yml
PrismaUI/views/OStim/: index.html  variables.css
PrismaUI/views/OStim/assets/: index-Bcdnf5gB.js  index-D_QO44k_.js  style-Bcq2GNsC.css
SKSE/Plugins/: OStimPrism.ini
SKSE_Source/: CMakeLists.txt  CMakePresets.json  PCH.h  plugin.cpp  vcpkg-configuration.json  vcpkg.json  version.rc
SKSE_Source/cmake/: x64-windows-static.cmake
SKSE_Source/src/: OStimDataProvider.cpp  OStimDataProvider.h  OstimNG-API-Thread.h  Papyrus.cpp  Papyrus.h  PrismaUIManager.cpp  PrismaUIManager.h  PrismaUI_API.h  Settings.cpp  Settings.h  UIUtil.h
Scripts/: OStimPrism_API.pex  TTOP_MainController.pex  TTOP_PlayerRef.pex
Scripts/Source/: OStimPrism_API.psc  TTOP_MainController.psc  TTOP_PlayerRef.psc
prisma-src/: index.html  package-lock.json  package.json  vite.config.ts
prisma-src/src/: App.tsx  alignmentConfig.ts  index.css  main.tsx  store.ts  types.ts
prisma-src/src/components/: index.ts
prisma-src/src/components/AlignmentMenu/: AlignmentMenu.styles.css  AlignmentMenu.tsx
prisma-src/src/components/ControlButtons/: ControlButtons.styles.css  ControlButtons.tsx
prisma-src/src/components/Icon/: Icon.tsx
prisma-src/src/components/List/: List.styles.css  List.tsx  NavigationList.tsx  UtilityOptionsList.tsx
prisma-src/src/components/Navigation/: Navigation.styles.css  Navigation.tsx  NavigationIcon.tsx
prisma-src/src/components/ProgressBar/: ProgressBar.styles.css  ProgressBar.tsx  ProgressBarContainer.styles.css  ProgressBarContainer.tsx
prisma-src/src/components/SearchMenu/: SearchMenu.styles.css  SearchMenu.tsx
prisma-src/src/components/ThreadStatus/: ThreadStatus.styles.css  ThreadStatus.tsx
prisma-src/src/components/Tooltip/: Tooltip.styles.css  Tooltip.tsx
prisma-src/src/hooks/: useControls.ts  useTooltip.ts
prisma-src/src/services/: gameIntegration.ts
prisma-src/src/store/: index.ts  types.ts
prisma-src/src/store/slices/: actorStatsSlice.ts  alignmentSlice.ts  controlButtonsSlice.ts  globalUISlice.ts  keySlice.ts  navigationSlice.ts  searchSlice.ts  threadStatusSlice.ts  utilityOptionsSlice.ts
prisma-src/src/utils/: isInGame.ts  keys.ts  scanCodeMap.ts
